@startuml

' Domain model for the Fulll Vehicle fleet parking management system

class Vehicle {
    id: UUID
    plateNumber: string

    latitude: number
    longitude: number
    altitude: number
}

class User {
    id: UUID
}

class Fleet {
    id: UUID
}

Fleet "0..1" -- "1" User
Vehicle "0..*" -- "0..*" Fleet

@enduml
